--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    lintOptions {
+          abortOnError false
+      }
     defaultConfig {
         applicationId "com.google.samples.apps.sunflower"
         minSdkVersion rootProject.minSdkVersion
